--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ if(NOT USE_INTERNAL_LIB)
 	add_library(widgetz ${SOURCES})
 	target_link_libraries(widgetz ${WZ_ALLEGRO_LDFLAGS})
 
+    if(BUILD_EXAMPLE)
 	set(EXAMPLE_LIBS widgetz ${WZ_ALLEGRO_LDFLAGS})
 	if(NOT MSVC)
 		list(APPEND EXAMPLE_LIBS m)
@@ -73,6 +74,7 @@ if(NOT USE_INTERNAL_LIB)
 
 	target_link_libraries(example ${EXAMPLE_LIBS})
 	install(DIRECTORY "${WIDGETZ_SOURCE_DIR}/include/widgetz" DESTINATION include)
+    endif(BUILD_EXAMPLE)
 	install(TARGETS widgetz ARCHIVE DESTINATION lib)
 else(NOT USE_INTERNAL_LIB)
 	add_library(widgetz ${SOURCES})
