[CMake] Yet another attempt at fixing the build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,11 @@ add_library(
 )
 
 target_include_directories(widgetz PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../include")
-target_link_libraries(widgetz PRIVATE unofficial-allegro5 freetype)
+target_link_libraries(widgetz PRIVATE ${ALLEGRO_LIBRARIES})
+target_link_libraries(widgetz PRIVATE ${FREETYPE_LIBRARIES})
+target_include_directories(widgetz PRIVATE ${ALLEGRO_INCLUDE_DIR})
+target_include_directories(widgetz PRIVATE ${FREETYPE_INCLUDE_DIR})
+
 
 install(TARGETS widgetz DESTINATION lib)
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../include" DESTINATION include)
