[CMake] Allow building the example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,7 @@ include_directories(
 if(MSVC)
     set(EXECUTABLE_TYPE "WIN32")
 endif(MSVC)
+
+if(BUILD_EXAMPLE)
+add_subdirectory(example)
+endif(BUILD_EXAMPLE)
